--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registro</title>
-    <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="register.css">
 </head>
 <body>
     <main class="registro">
