--- a/olvidaste-contraseña.html
+++ b/olvidaste-contraseña.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="password.css">
+    <link rel="stylesheet" href="olvidaste-contraseña.css">
     <script src="https://kit.fontawesome.com/b9a5b42442.js" crossorigin="anonymous"></script>
     <title>Olvidaste contraseña</title>
 </head>
